Added block EJS functionality from pull request not yet added to EJS - see README for details

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -33,7 +33,7 @@
 	<body>
 		<% include header %> <!-- The top bar for the site -->
 
-		<% include home %> <!-- Find out if there in a way to include a specific file here like using <%= content %>
+		<% include content %> <!-- Find out if there in a way to include a specific file here like using <%= content %> -->
 
 		<% include footer %> <!-- The footer for the site -->
 	</body>
