Scaffolding and basic README complete

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -33,7 +33,7 @@
 	<body>
 		<% include header %> <!-- The top bar for the site -->
 
-		<% include content %> <!-- Find out if there in a way to include a specific file here like using <%= content %> -->
+		<% include content %> <!-- includes the content variable layout -->
 
 		<% include footer %> <!-- The footer for the site -->
 	</body>
