Section panels working and code cleanup

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -2,272 +2,11 @@
 @import "crossBrowser";
 
 @white : #f2f2f2;
-@off-white : red;
+@off-white : #e2e2e6;
+@border-color: #777;
 
-body {
-  font-family:  'OpenSans', "Helvetica Neue", Helvetica, Arial;
-}
-
-/* Top Bar Styling */
-.navbar {
-  background-color : @steel-darkest;
-  border-radius    : 0;
-  border           : none;
-  border-bottom    : 1px solid #777;
-  min-height       : 75px;
-  text-shadow      : none;
-}
-
-.navbar-brand {
-   padding     : 0;
-   line-height : 90px;
-   height      : 90px;
-   img {
-      vertical-align: middle;
-      max-height: 100%
-   }
-}
-
-.nav>li>a:before {
-    opacity          : 0;
-    content          : "";
-    position         : absolute;
-    background-color : @roadmunk-orange;
-    left             : 20px;
-    right            : 20px;
-    height           : 2px;
-    bottom           : 25%;
-    .transition(all 0.2s);
-}
-
-.navbar-toggle {
-  background: none;  
-  border: none;
-  .border-radius(0);
-  .box-shadow(none);
-  .transition(all 0.2s);
-}
-
-.navbar-nav {
-  &.navbar-right {
-    &:last-child {
-      margin-right: 35px;
-    }
-  }
-}
-
-.nav>li.active>a:before, .nav>li>a:hover:before {
-    opacity: 1;
-}
-.nav>li>a:focus {
-    outline: none;
-}
-
-.nav>.active>a, #masthead .nav>.active>a:hover, #masthead .nav>.active>a:focus {
-    .box-shadow(none);
-    background-color: transparent;
-}
-
-.navbar-text {
-  line-height: 24px;
-  margin-top: 33px;
-  margin-bottom: 33px;
-}
-
-.navbar-default .navbar-nav > li > a {
-  color: @roadmunk-orange;
-  font-size: 16px;
-  padding-top: 33px;
-  padding-bottom: 33px;
-  text-shadow: none;
-  font-style: normal;
-  font-weight: 400;
-  position: relative;
-  .transition(all 0.2s);
-  &:hover {
-    color: @roadmunk-orange;
-    //border-bottom: 1px solid @roadmunk-orange;
-  }
-}
-
-.navbar-default {
-  .navbar-collapse {
-    border-color: #777;
-  }
-  .navbar-toggle {
-    .icon-bar {
-        background-color: @roadmunk-orange;
-        .box-shadow(none);
-    }
-    &:hover, &:focus {
-      background-color: @steel-darkest;
-    }
-  }
-}
-
-.navbar-toggle {
-    margin-top: 28px;
-    margin-bottom: 28px;
-}
-
-.navbar-toggle {
-    width: 44px;
-    height: 34px;
-}
-.navbar-toggle .icon-bar {
-    position: absolute;
-    left: 50%;
-    margin-left: -11px;
-    margin-top: 0 !important;
-    .transform(rotate(0deg));
-    .transition(all 0.2s);
-    .transform-origin(50% 50% 50%);
-}
-
-.navbar-toggle {
-  &.collapsed {
-    .icon-bar {
-      &:nth-child(2) {
-        top: 10px;
-      }
-      &:nth-child(3) {
-        opacity: 1;
-        top: 46%
-      }
-      &:nth-child(4) {
-        top: 22px;
-      }
-    }
-  }
-  &:not(.collapsed) {
-    .icon-bar {
-      top: 50%;
-      &:nth-child(2) {
-        top: 50%;
-        .transform(rotate(45deg));
-      }
-      &:nth-child(3) {
-         opacity: 0;
-      }
-      &:nth-child(4) {
-        .transform(rotate(-45deg));
-      }
-    }
-  }
-}
-
-.dropdown-menu {
-  .divider {
-    background-color: #777;
-  }
-}
-
-.navbar > .container .navbar-brand,
-.navbar > .container-fluid .navbar-brand {
-  margin-left: 25px;
-}
-
-/* Responsive Design for less than 768px */
-
-@media (max-width: 768px) {
-
-  .navbar-nav {
-    margin: 10px -15px;
-    &.navbar-right {
-      padding-top: 0;
-      &:last-child {
-        margin-right: -15px;
-      }
-    }
-  }
-  .navbar-default .navbar-nav > li > a {
-    padding-top: 10px;
-    padding-bottom: 10px;
-    &:hover {
-      background-color: darken(@steel-darkest, 10%);
-    }
-    &:before {
-      display: none;
-    }
-  }
-}
-
-/* Footer Styling */
-
-.footer {
-  width: 100%;
-  border-top: 1px solid #777;
-  color: @roadmunk-orange;
-  background: @steel-darkest;
-  .box-sizing(border-box);
-
-
-  a {
-    color: @white;
-    text-decoration: none;
-    .transition(color 0.1s);
-    &:hover {
-      color: @off-white;
-      .transition(color 0.1s);
-    }
-    &:active {
-      color: @off-white;
-    }
-  }
-
-  .row {
-    margin: 2rem auto;
-
-    .section-content {
-      .flex-display();
-      .flex-direction(row);
-      .align-items(flex-start);
-      .justify-content(center);
-      .column {
-        .flex-display();
-        .flex-direction(column);
-        width: 18%;
-        margin-right: 3.5%;
-        margin-left: 1%;
-        h4 {
-          font-size: 14px;
-          line-height: 1.4em;
-          text-transform: uppercase;
-          color: @dark-orange;
-          line-height: 1.4em;
-        }
-        ol {
-          list-style: none;
-          .box-sizing(border-box);
-          .nav-item {
-            line-height: 1.7rem;
-            list-style-type: none;
-          }
-        }
-
-      }
-    }
-  }
-
-  .copyright-info {
-    width: 74%;
-    margin: 1rem auto 4rem auto;
-    font-size: 1.5rem;
-    letterspacing: 1px;
-    text-transform: uppercase;
-    border-top: 1px solid #777;
-    padding-top: 1rem;
-
-    .flex-display();
-    .align-items(center);
-    .justify-content(space-between);
-    .info-left {
-      .box-sizing(border-box);
-    }
-  }
-}
-
-
-
-
+@import "global";
+@import "header";
+@import "footer";
+@import "home";
 
