--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,98 +1,104 @@
 <footer class="footer">
 	<div class="row">
-		<div class="section-content">
-			<div class="column">
-				<h4>About Roadmunk</h4>
-				<ol>
-					<li class="nav-item">
-						<a href="#" title="Link">
-							Blog
-						</a>
-					</li>
-					<li class="nav-item">
-						<a href="#" title="Link">
-							Twitter
-						</a>
-					</li>
-					<li class="nav-item">
-						<a href="#" title="Link">
-							Contact Us
-						</a>
-					</li>
-				</ol>
-			</div>
-			<div class="column">
-				<h4>Resources</h4>
-				<ol>
-					<li class="nav-item">
-						<a href="#" title="Link">
-							Pricing
-						</a>
-					</li>
-					<li class="nav-item">
-						<a href="#" title="Link">
-							FAQ
-						</a>
-					</li>
-					<li class="nav-item">
-						<a href="#" title="Link">
-							&nbsp;
-						</a>
-					</li>
-				</ol>
-			</div>
-			<div class="column">
-				<h4>Helpful Links</h4>
-				<ol>
-					<li class="nav-item">
-						<a href="#" title="Link">
-							Roadmunk Help
-						</a>
-					</li>
-					<li class="nav-item">
-						<a href="#" title="Link">
-							Security
-						</a>
-					</li>
-					<li class="nav-item">
-						<a href="#" title="Link">
-							Privacy Policy
-						</a>
-					</li>
-				</ol>
-			</div>
-			<div class="column">
-				<h4>Social</h4>
-				<ol>
-					<li class="nav-item">
-						<a href="#" title="Link">
-							Twitter
-						</a>
-					</li>
-					<li class="nav-item">
-						<a href="#" title="Link">
-							Facebook
-						</a>
-					</li>
-					<li class="nav-item">
-						<a href="#" title="Link">
-							Linked In
-						</a>
-					</li>
-				</ol>
-			</div>
+		<div class="column">
+			<h4>About Roadmunk</h4>
+			<ol>
+				<li class="nav-item">
+					<a href="#" title="Link">
+						Blog
+					</a>
+				</li>
+				<li class="nav-item">
+					<a href="#" title="Link">
+						Twitter
+					</a>
+				</li>
+				<li class="nav-item">
+					<a href="#" title="Link">
+						Contact Us
+					</a>
+				</li>
+			</ol>
+		</div>
+		<div class="column">
+			<h4>Resources</h4>
+			<ol>
+				<li class="nav-item">
+					<a href="#" title="Link">
+						Pricing
+					</a>
+				</li>
+				<li class="nav-item">
+					<a href="#" title="Link">
+						FAQ
+					</a>
+				</li>
+				<li class="nav-item">
+					<a href="#" title="Link">
+						&nbsp;
+					</a>
+				</li>
+			</ol>
+		</div>
+		<div class="column">
+			<h4>Helpful Links</h4>
+			<ol>
+				<li class="nav-item">
+					<a href="#" title="Link">
+						Roadmunk Help
+					</a>
+				</li>
+				<li class="nav-item">
+					<a href="#" title="Link">
+						Security
+					</a>
+				</li>
+				<li class="nav-item">
+					<a href="#" title="Link">
+						Privacy Policy
+					</a>
+				</li>
+			</ol>
+		</div>
+		<div class="column">
+			<h4>Social</h4>
+			<ol>
+				<li class="nav-item">
+					<a href="#" title="Link">
+						Twitter
+					</a>
+				</li>
+				<li class="nav-item">
+					<a href="#" title="Link">
+						Facebook
+					</a>
+				</li>
+				<li class="nav-item">
+					<a href="#" title="Link">
+						Linked In
+					</a>
+				</li>
+			</ol>
 		</div>
 	</div>
 	<div class="copyright-info">
 		<div class="info-left">
-			&#169;2012&#45;2014 Roadmunk&nbsp;&#183;&nbsp;
-			<a href="#" title="Terms of Service">Terms of Service</a>
+			&#169;2012&#45;2014 Roadmunk
 			&nbsp;&#183;&nbsp;
-			<a href="#" title="Privacy Policy">Privacy Policy</a>
+			<a href="#" title="Terms of Service">
+				Terms of Service
+			</a>
 			&nbsp;&#183;&nbsp;
-			<a href="#" title="Security">Security</a>
+			<a href="#" title="Privacy Policy">
+				Privacy Policy
+			</a>
+			&nbsp;&#183;&nbsp;
+			<a href="#" title="Security">
+				Security
+			</a>
 		</div>
 		<div class="info-right">
-			<a href="#contactpage" title="Security">support&#64;roadmunk.com</a>
+			<a href="#contactpage" title="Support">support&#64;roadmunk.com</a>
 		</div>
 	</div>
+</footer>
