--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,4 +1,4 @@
-<nav id="masthead" class="navbar navbar-default" role="navigation">
+<nav id="masthead" class="navbar navbar-fixed-top navbar-default" role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -13,7 +13,6 @@
       </a>
     </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Features</a></li>
