--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,2 +1,123 @@
-<!--<h1><%= title %></h1>
-<p>Welcome to <%= title %></p>-->
+<section class="section white-black section-short top-header">
+	<div class="background-media"></div>
+	<div class="background-overlay"></div>
+	<div class="container">
+		<header class="section-header text-center underline">
+			<h1 class="headline hyper hairline">Roadmunk</h1>
+			<p>creating brilliant product roadmaps</p>
+		</header>
+	</div>
+</section>
+<article>
+	<section class="section black-white section-normal has-top">
+		<div class="decor-top">
+			<svg class="decor" height="100%" preserveAspectRatio="none" version="1.1" viewBox="0 0 100 100" width="100%" xmlns="http://www.w3.org/2000/svg">
+				<path d="M0 0 L100 100 L0 100" stroke-width="0"></path>
+			</svg>
+		</div>
+		<div class="background-media"></div>
+		<div class="background-overlay"></div>
+		<div class="container">
+			<header class="section-header text-center underline">
+				<h1 class="headline hyper hairline">Roadmunk</h1>
+				<p>creating brilliant product roadmaps</p>
+			</header>
+			<div class="row">
+				<div class="col-md-12 text-default">
+					<ul class="list-unstyled row box-list">
+						<li class="col-md-3">
+							<h3 class="text-center">Roadmunk is Awesome</h3>
+							<p class="text-center">Super cool paragraph tag</p>
+						</li>
+						<li class="col-md-3">
+							<h3 class="text-center">Roadmunk is Awesome</h3>
+							<p class="text-center">Super cool paragraph tag</p>
+						</li>
+						<li class="col-md-3">
+							<h3 class="text-center">Roadmunk is Awesome</h3>
+							<p class="text-center">Super cool paragraph tag</p>
+						</li>
+						<li class="col-md-3">
+							<h3 class="text-center">Roadmunk is Awesome</h3>
+							<p class="text-center">Super cool paragraph tag</p>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="section white-black section-normal has-top">
+		<div class="decor-top">
+			<svg class="decor" height="100%" preserveAspectRatio="none" version="1.1" viewBox="0 0 100 100" width="100%" xmlns="http://www.w3.org/2000/svg">
+				<path d="M0 100 L100 0 L100 100" stroke-width="0"></path>
+			</svg>
+		</div>
+		<div class="background-media"></div>
+		<div class="background-overlay"></div>
+		<div class="container">
+			<header class="section-header text-center underline">
+				<h1 class="headline hyper hairline">Roadmunk</h1>
+				<p>creating brilliant product roadmaps</p>
+			</header>
+			<div class="row">
+				<div class="col-md-12 text-default">
+					<ul class="list-unstyled row box-list">
+						<li class="col-md-3">
+							<h3 class="text-center">Roadmunk is Awesome</h3>
+							<p class="text-center">Super cool paragraph tag</p>
+						</li>
+						<li class="col-md-3">
+							<h3 class="text-center">Roadmunk is Awesome</h3>
+							<p class="text-center">Super cool paragraph tag</p>
+						</li>
+						<li class="col-md-3">
+							<h3 class="text-center">Roadmunk is Awesome</h3>
+							<p class="text-center">Super cool paragraph tag</p>
+						</li>
+						<li class="col-md-3">
+							<h3 class="text-center">Roadmunk is Awesome</h3>
+							<p class="text-center">Super cool paragraph tag</p>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="section black-white section-normal has-top">
+		<div class="decor-top">
+			<svg class="decor" height="100%" preserveAspectRatio="none" version="1.1" viewBox="0 0 100 100" width="100%" xmlns="http://www.w3.org/2000/svg">
+				<path d="M0 0 L100 100 L0 100" stroke-width="0"></path>
+			</svg>
+		</div>
+		<div class="background-media"></div>
+		<div class="background-overlay"></div>
+		<div class="container">
+			<header class="section-header text-center underline">
+				<h1 class="headline hyper hairline">Roadmunk</h1>
+				<p>creating brilliant product roadmaps</p>
+			</header>
+			<div class="row">
+				<div class="col-md-12 text-default">
+					<ul class="list-unstyled row box-list">
+						<li class="col-md-3">
+							<h3 class="text-center">Roadmunk is Awesome</h3>
+							<p class="text-center">Super cool paragraph tag</p>
+						</li>
+						<li class="col-md-3">
+							<h3 class="text-center">Roadmunk is Awesome</h3>
+							<p class="text-center">Super cool paragraph tag</p>
+						</li>
+						<li class="col-md-3">
+							<h3 class="text-center">Roadmunk is Awesome</h3>
+							<p class="text-center">Super cool paragraph tag</p>
+						</li>
+						<li class="col-md-3">
+							<h3 class="text-center">Roadmunk is Awesome</h3>
+							<p class="text-center">Super cool paragraph tag</p>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</section>
+</article>
