--- a/views/scripts.ejs
+++ b/views/scripts.ejs
@@ -1,2 +1,3 @@
 <script src="/vendor/jquery/dist/jquery.js"></script>
 <script src="/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="/javascripts/main.js"></script>
