Features page filling out

--- a/public/stylesheets/footer.less
+++ b/public/stylesheets/footer.less
@@ -32,7 +32,7 @@
 
   .row {
     width: 70%;
-    margin: 2rem auto;
+    margin: 3rem auto 2rem auto;
 
     .flex-display();
     .flex-direction(row);
