--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,8 +3,8 @@
 	<div class="background-overlay"></div>
 	<div class="container">
 		<header class="section-header text-center underline">
-			<h1 class="headline hyper hairline">Roadmunk</h1>
-			<p>creating brilliant product roadmaps</p>
+			<h1 class="headline text-large hairline">Create Beautiful Roadmaps Quickly</h1>
+			<p>Start building insightful visualizations for your audience.</p>
 		</header>
 	</div>
 </section>
