--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html itemscope itemtype="http://schema.org/Product" lang="en">
 	<head>
@@ -26,6 +27,7 @@
 		<!-- Stylesheets -->
 		<link rel='stylesheet' href='/vendor/bootstrap/dist/css/bootstrap.css' />
 		<link rel='stylesheet' href='/stylesheets/fonts.css' />
+		<link rel='stylesheet' href='/stylesheets/animate.css' />
 		<link rel='stylesheet' href='/stylesheets/style.css' />
 
 		<!-- Add something here so you can include specific stylesheet -->
@@ -36,6 +38,7 @@
 		<% include header %> <!-- The top bar for the site -->
 
 		<% include content %> <!-- includes the content variable layout -->
+		<% include gotop %> <!-- includes the content variable layout -->
 
 		<% include footer %> <!-- The footer for the site -->
 	</body>
