Converted over/Cleaned up pricing and TnC page

--- a/public/stylesheets/colors.less
+++ b/public/stylesheets/colors.less
@@ -17,9 +17,9 @@
 @error-red         : #FF4840;
 @admin-green       : #6BC37E;
 @dialog-bg         : #EEEEEE;
-@global-background : url('/assets/img/global-bg.png');
-@global-background-triangle-right : url('/assets/img/global-bg-triangle-right.png');
-@global-background-triangle-left : url('/assets/img/global-bg-triangle-left.png');
+//-@global-background : url('/assets/img/global-bg.png');
+//-@global-background-triangle-right : url('/assets/img/global-bg-triangle-right.png');
+//-@global-background-triangle-left : url('/assets/img/global-bg-triangle-left.png');
 
 // Steel Color Palette
 @steel-darkest  : #2F3134;
