--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -10,4 +10,7 @@
 @import "footer";
 @import "home";
 @import "features";
+@import "pricing";
+@import "pricingTable";
+@import "termsAndConditions";
 
