--- a/views/features.ejs
+++ b/views/features.ejs
@@ -36,8 +36,8 @@
 			<div class="row">
 				<div id="feature_1_text" class="col-md-6 transparent">
 					<header class="small-header text-left">
-						<h1 class="headline text-small hairline">Pick Your Roadmap View</h1>
-						<p class="body-subheader">Create your roadmap view in minutes. Using our simple drag and drop tools, add and prioritize items, organize headers, and pivot data by custom fields.</p>
+						<h1 class="headline text-small hairline">Designer Colors</h1>
+						<p class="body-subheader">Colorize your roadmap from our selection of palettes or create your own palette to match your brand to give the deepest impact to your audience. </p>
 					</header>
 				</div>
 				<div id="feature_1_img" class="col-md-6 right image-right transparent">
@@ -61,8 +61,8 @@
 				</div>
 				<div id="feature_2_text" class="col-md-6 right transparent">
 					<header class="small-header text-right">
-						<h1 class="headline text-small hairline">Pick Your Roadmap View</h1>
-						<p class="body-subheader">Create your roadmap view in minutes. Using our simple drag and drop tools, add and prioritize items, organize headers, and pivot data by custom fields.</p>
+						<h1 class="headline text-small hairline">Fit To Powerpoint &#38; Legal</h1>
+						<p class="body-subheader">Choose what aspect ratio and resolution you require for that upcoming presentation. Then download your roadmap in either PNG or HTML.</p>
 					</header>
 				</div>
 			</div>
@@ -80,8 +80,8 @@
 			<div class="row">
 				<div id="feature_3_text" class="col-md-6 transparent">
 					<header class="small-header text-left">
-						<h1 class="headline text-small hairline">Pick Your Roadmap View</h1>
-						<p class="body-subheader">Create your roadmap view in minutes. Using our simple drag and drop tools, add and prioritize items, organize headers, and pivot data by custom fields.</p>
+						<h1 class="headline text-small hairline">Share Your Roadmap As A URL</h1>
+						<p class="body-subheader">Share a roadmap view as URL so that your stakeholders can stay up to date and drill down on information relavent to them.</p>
 					</header>
 				</div>
 				<div id="feature_3_img" class="col-md-6 right image-right transparent">
@@ -105,8 +105,8 @@
 				</div>
 				<div id="feature_4_text" class="col-md-6 right transparent">
 					<header class="small-header text-right">
-						<h1 class="headline text-small hairline">Pick Your Roadmap View</h1>
-						<p class="body-subheader">Create your roadmap view in minutes. Using our simple drag and drop tools, add and prioritize items, organize headers, and pivot data by custom fields.</p>
+						<h1 class="headline text-small hairline">One Data Set, Unlimited Views</h1>
+						<p class="body-subheader">From a single set of data, create multiple roadmap views to be shared with different audiences</p>
 					</header>
 				</div>
 			</div>
@@ -124,8 +124,8 @@
 			<div class="row">
 				<div id="feature_5_text" class="col-md-6 transparent">
 					<header class="small-header text-left">
-						<h1 class="headline text-small hairline">Pick Your Roadmap View</h1>
-						<p class="body-subheader">Create your roadmap view in minutes. Using our simple drag and drop tools, add and prioritize items, organize headers, and pivot data by custom fields.</p>
+						<h1 class="headline text-small hairline">Share Your Roadmap As A URL</h1>
+						<p class="body-subheader">Share roadmap views with a simple URL so that...add and prioritize items, organize headers, and pivot data by custom fields.</p>
 					</header>
 				</div>
 				<div id="feature_5_img" class="col-md-6 right image-right transparent">
@@ -149,8 +149,8 @@
 				</div>
 				<div id="feature_6_text" class="col-md-6 right transparent">
 					<header class="small-header text-right">
-						<h1 class="headline text-small hairline">Pick Your Roadmap View</h1>
-						<p class="body-subheader">Create your roadmap view in minutes. Using our simple drag and drop tools, add and prioritize items, organize headers, and pivot data by custom fields.</p>
+						<h1 class="headline text-small hairline">Manage Your Table Of Data</h1>
+						<p class="body-subheader">Create, import and organize your roadmap items in a sleek table view. Add custom columns, manipulate data, all in the cloud</p>
 					</header>
 				</div>
 			</div>
