--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -9,7 +9,7 @@
 					</a>
 				</li>
 				<li class="nav-item">
-					<a href="#" title="Link">
+					<a href="https://twitter.com/RoadmunkApp" title="Link">
 						Twitter
 					</a>
 				</li>
@@ -34,8 +34,8 @@
 					</a>
 				</li>
 				<li class="nav-item">
-					<a href="#" title="Link">
-						&nbsp;
+					<a href="/termsandconditions" title="Link">
+						Terms and Conditions
 					</a>
 				</li>
 			</ol>
@@ -64,7 +64,7 @@
 			<h4>Social</h4>
 			<ol>
 				<li class="nav-item">
-					<a href="#" title="Link">
+					<a href="https://twitter.com/RoadmunkApp" title="Link">
 						Twitter
 					</a>
 				</li>
