--- a/views/header.ejs
+++ b/views/header.ejs
@@ -16,9 +16,9 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/features">Features</a></li>
-        <li><a href="#">Pricing</a></li>
+        <li><a href="/pricing">Pricing</a></li>
         <li><a href="#">Blog</a></li>
-        <li><a href="#">Sign In</a></li>
+        <li><a href="https://app.roadmunk.com/login/#/">Sign In</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
