--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,4 @@
-<section class="section white-black section-short top-header">
+<section class="section white-black section-short landing-page">
 	<div class="background-media"></div>
 	<div class="background-overlay"></div>
 	<div class="container">
@@ -6,6 +6,13 @@
 			<h1 class="headline text-large hairline">Create Beautiful Roadmaps Quickly</h1>
 			<p>Start building insightful visualizations for your audience.</p>
 		</header>
+		<div class="row">
+			<div class="col-lg-12 med-margin-bottom">
+				<a href="https://app.roadmunk.com/login/#/signup">
+					<div class="cta center"></div>
+				</a>
+			</div>
+		</div>
 	</div>
 </section>
 <article>
@@ -19,27 +26,94 @@
 		<div class="background-overlay"></div>
 		<div class="container">
 			<header class="section-header text-center underline">
-				<h1 class="headline hyper hairline">Roadmunk</h1>
-				<p>creating brilliant product roadmaps</p>
+				<h1 class="headline text-large hairline xsmall-margin-bottom">How It Works</h1>
+			</header>
+			<div class="row med-margin-bottom">
+				<div class="col-md-12 text-default">
+					<ul class="list-unstyled row image-list">
+						<li class="col-md-4">
+							<img src="/images/icon-cogs.png" width="200" height="200">
+							<h3 class="text-center">Create</h3>
+						</li>
+						<li class="col-md-4">
+							<img src="/images/icon-composer.png" width="200" height="200">
+							<h3 class="text-center">Design</h3>
+						</li>
+						<li class="col-md-4">
+							<!-- roadmap1 is better proportioned but 2 looks better? -->
+							<img src="/images/icon-imac-roadmap2.png" width="200" height="200">
+							<h3 class="text-center">Share</h3>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="section white-black section-normal has-top">
+		<div class="decor-top">
+			<svg class="decor" height="100%" preserveAspectRatio="none" version="1.1" viewBox="0 0 100 100" width="100%" xmlns="http://www.w3.org/2000/svg">
+				<path d="M0 100 L100 0 L100 100" stroke-width="0"></path>
+			</svg>
+		</div>
+		<div class="background-media"></div>
+		<div class="background-overlay"></div>
+		<div class="container">
+			<header class="small-header text-center">
+				<h1 class="headline text-medium hairline med-margin-bottom">Roadmaps Of All Types</h1>
 			</header>
 			<div class="row">
-				<div class="col-md-12 text-default">
-					<ul class="list-unstyled row box-list">
+				<div class="col-md-12">
+					<ul class="list-unstyled row image-list">
+						<li class="col-md-4">
+							<img src="http://placehold.it/320x200">
+							<h3>Sprint&#47;Feature Roadmap</h3>
+						</li>
+						<li class="col-md-4">
+							<img src="http://placehold.it/320x200">
+							<h3>Project Roadmap</h3>
+						</li>
+						<li class="col-md-4">
+							<img src="http://placehold.it/320x200">
+							<h3>Release Roadmap</h3>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-12 small-margin-top small-margin-bottom">
+					<a href="https://app.roadmunk.com/login/#/signup">
+						<div class="cta center"></div>
+					</a>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="section black-white section-short has-top">
+		<div class="decor-top">
+			<svg class="decor" height="100%" preserveAspectRatio="none" version="1.1" viewBox="0 0 100 100" width="100%" xmlns="http://www.w3.org/2000/svg">
+				<path d="M0 0 L100 100 L0 100" stroke-width="0"></path>
+			</svg>
+		</div>
+		<div class="background-media"></div>
+		<div class="background-overlay"></div>
+		<div class="container">
+			<header class="section-header text-center underline">
+				<h1 class="headline text-large xsmall-margin-bottom hairline">Our Clients</h1>
+			</header>
+			<div class="row med-margin-bottom">
+				<div class="col-md-12">
+					<ul class="list-unstyled row image-list">
 						<li class="col-md-3">
-							<h3 class="text-center">Roadmunk is Awesome</h3>
-							<p class="text-center">Super cool paragraph tag</p>
+							<img src="http://placehold.it/150x150">
 						</li>
 						<li class="col-md-3">
-							<h3 class="text-center">Roadmunk is Awesome</h3>
-							<p class="text-center">Super cool paragraph tag</p>
+							<img src="http://placehold.it/150x150">
 						</li>
 						<li class="col-md-3">
-							<h3 class="text-center">Roadmunk is Awesome</h3>
-							<p class="text-center">Super cool paragraph tag</p>
+							<img src="http://placehold.it/150x150">
 						</li>
 						<li class="col-md-3">
-							<h3 class="text-center">Roadmunk is Awesome</h3>
-							<p class="text-center">Super cool paragraph tag</p>
+							<img src="http://placehold.it/150x150">
 						</li>
 					</ul>
 				</div>
@@ -56,31 +130,56 @@
 		<div class="background-overlay"></div>
 		<div class="container">
 			<header class="section-header text-center underline">
-				<h1 class="headline hyper hairline">Roadmunk</h1>
-				<p>creating brilliant product roadmaps</p>
+				<h1 class="headline text-large xsmall-margin-bottom hairline">Clients Said</h1>
 			</header>
-			<div class="row">
-				<div class="col-md-12 text-default">
-					<ul class="list-unstyled row box-list">
-						<li class="col-md-3">
-							<h3 class="text-center">Roadmunk is Awesome</h3>
-							<p class="text-center">Super cool paragraph tag</p>
-						</li>
-						<li class="col-md-3">
-							<h3 class="text-center">Roadmunk is Awesome</h3>
-							<p class="text-center">Super cool paragraph tag</p>
-						</li>
-						<li class="col-md-3">
-							<h3 class="text-center">Roadmunk is Awesome</h3>
-							<p class="text-center">Super cool paragraph tag</p>
-						</li>
-						<li class="col-md-3">
-							<h3 class="text-center">Roadmunk is Awesome</h3>
-							<p class="text-center">Super cool paragraph tag</p>
-						</li>
-					</ul>
+			<blockquote id="testimonial1" class="fancy-blockquote  transparent">
+				<div class="row small-margin-bottom">
+					<div class="col-md-2">
+						<div class="box-round box-huge">
+							<div class="box-dummy"></div>
+							<div class="box-inner">
+								<img src="/images/man-1.png">
+							</div>
+						</div>
+					</div>
+					<div class="col-md-10">
+						<p>Nullam vitae sollicitudin eros. Cras varius vehicula velit, ac congue quam dictum sed. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.Donec sed odio dui. Nulla vitae elit libero, a pharetra augue. Nullam id dolor id ultricies ut vehicula ut id. Integer posuere erat a venenatis dapibus posuere velit aliquet duis mollis. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
+						<small>Sue Doe</small>
+					</div>
 				</div>
-			</div>
+			</blockquote>
+			<blockquote id="testimonial2" class="fancy-blockquote transparent">
+				<div class="row small-margin-bottom">
+					<div class="col-md-10">
+						<p>Nullam vitae sollicitudin eros. Cras varius vehicula velit, ac congue quam dictum sed. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.Donec sed odio dui. Nulla vitae elit libero, a pharetra augue. Nullam id dolor id ultricies ut vehicula ut id. Integer posuere erat a venenatis dapibus posuere velit aliquet duis mollis. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
+						<small>Sue Doe</small>
+					</div>
+					<div class="col-md-2">
+						<div class="box-round box-huge">
+							<div class="box-dummy"></div>
+							<div class="box-inner">
+								<img src="/images/woman-1.png">
+							</div>
+						</div>
+					</div>
+				</div>
+			</blockquote>
+			<blockquote id="testimonial3" class="fancy-blockquote transparent">
+				<div class="row small-margin-bottom">
+					<div class="col-md-2">
+						<div class="box-round box-huge">
+							<div class="box-dummy"></div>
+							<div class="box-inner">
+								<img src="/images/man-2.png">
+							</div>
+						</div>
+					</div>
+					<div class="col-md-10">
+						<p>Nullam vitae sollicitudin eros. Cras varius vehicula velit, ac congue quam dictum sed. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.Donec sed odio dui. Nulla vitae elit libero, a pharetra augue. Nullam id dolor id ultricies ut vehicula ut id. Integer posuere erat a venenatis dapibus posuere velit aliquet duis mollis. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
+						<small>Sue Doe</small>
+					</div>
+				</div>
+			</blockquote>
 		</div>
 	</section>
 	<section class="section black-white section-normal has-top">
@@ -93,29 +192,14 @@
 		<div class="background-overlay"></div>
 		<div class="container">
 			<header class="section-header text-center underline">
-				<h1 class="headline hyper hairline">Roadmunk</h1>
-				<p>creating brilliant product roadmaps</p>
+				<h1 class="headline text-medium hairline">See Roadmunk In Action</h1>
+				<p>Start a free 14-day trial and build your roadmap in a matter of minutes.</p>
 			</header>
 			<div class="row">
-				<div class="col-md-12 text-default">
-					<ul class="list-unstyled row box-list">
-						<li class="col-md-3">
-							<h3 class="text-center">Roadmunk is Awesome</h3>
-							<p class="text-center">Super cool paragraph tag</p>
-						</li>
-						<li class="col-md-3">
-							<h3 class="text-center">Roadmunk is Awesome</h3>
-							<p class="text-center">Super cool paragraph tag</p>
-						</li>
-						<li class="col-md-3">
-							<h3 class="text-center">Roadmunk is Awesome</h3>
-							<p class="text-center">Super cool paragraph tag</p>
-						</li>
-						<li class="col-md-3">
-							<h3 class="text-center">Roadmunk is Awesome</h3>
-							<p class="text-center">Super cool paragraph tag</p>
-						</li>
-					</ul>
+				<div class="col-lg-12">
+					<a href="https://app.roadmunk.com/login/#/signup">
+						<div class="cta center"></div>
+					</a>
 				</div>
 			</div>
 		</div>
