--- a/views/pricing.ejs
+++ b/views/pricing.ejs
@@ -8,15 +8,15 @@
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
 		<div class="container">
-			<header class="small-header text-left">
-				<h1 class="headline text-small hairline">Your Life Is About To Get Easier</h1>
+			<header class="small-header text-left underline underline-left">
+				<h1 class="headline text-small hairline">See Roadmunk In Action</h1>
 			</header>
 			<div class="row">
 				<span class="col-md-5 text-left subheader">
-					<p>Want to try Roadmunk? Get started with a 14-day trial.</p>
+					<p>Start a free 14-day trial and build your roadmap in a matter of minutes.</p>
 				</span>
-				<span class="col-md-5 right subheader">
-					<a href="#" class="cta right"></a>
+				<span class="col-md-5 right subheader move-up">
+					<a href="https://app.roadmunk.com/login/#/signup" class="cta right"></a>
 				</span>
 			</div>
 		</div>
