--- a/views/scripts.ejs
+++ b/views/scripts.ejs
@@ -3,4 +3,6 @@
 <script src="/javascripts/main.js"></script>
 <%if (content == "features") { %>
 	<script src="/javascripts/features.js"></script>
+<% } else if (content = "home") { %>
+	<script src="/javascripts/home.js"></script>
 <% } %>
