--- a/public/stylesheets/home.less
+++ b/public/stylesheets/home.less
@@ -33,6 +33,14 @@
       width: 25%;
       bottom           : -15%;
     }
+    &.underline-left {
+      &:before {
+        margin: 0;
+        width: 40%;
+        left: 0;
+        bottom : -35px;
+      }
+    }
   }
 
   &.black-white {
@@ -47,12 +55,18 @@
     &.top-header {
       padding-top: 90px;
     }
+    &.landing-page {
+      padding-top: 160px;
+    }
   }
 
   &.section-normal {
     padding: 90px 0;
     &.top-header {
       padding-top: 120px;
+    }
+    &.landing-page {
+      padding-top: 1600px;
     }
   }
 
@@ -79,18 +93,6 @@
         border-bottom : 0;
         position      : relative;
         margin-bottom : 0;
-      }
-      .hyper {
-        font-size   : 96px;
-        line-height : 1;
-      }
-      .text-large {
-        font-size: 72px;
-        line-height: 0.9;
-      }
-      .text-small {
-        font-size: 32px;
-        line-height: 0.5;
       }
       .hairline {
         font-weight : 300;
@@ -149,6 +151,74 @@
     display  : block;
     position : relative;
     margin   : 0 auto;
+  }
+
+  /* New stuff */
+  .fancy-blockquote {
+    border: 0;
+    padding: 0;
+    position: relative;
+  }
+  .fancy-blockquote p {
+    font-size: 18px;
+    line-height: 2em;
+    margin-bottom: 24px;
+    font-weight: bold;
+    font-style: italic;
+  }
+  .fancy-blockquote small {
+      font-size: 12px;
+      text-transform: uppercase;
+  }
+  .fancy-blockquote small:before {
+      content: ""
+  }
+  blockquote {
+    z-index : 4;
+  }
+  blockquote p {
+    font-size: 18px;
+    font-weight: lighter;
+    line-height: 1.5em;
+    &:before {
+      content: '"';
+    }
+    &:after {
+      content: '"';
+    }
+  }
+  blockquote small {
+      font-weight: bold;
+  }
+
+  .box-round, .box-rect, .box-square, .box-hex {
+      display: block;
+      text-align: center;
+      margin: 0 auto 24px auto;
+      position: relative;
+      z-index: 100;
+      width: 150px;
+      max-width: 100%;
+  }
+
+  .box-dummy {
+      padding-top: 100%;
+  }
+
+  .box-inner {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+  }
+
+  .box-inner img {
+      max-width: 100%;
+  }
+  .box-round .box-inner {
+      border-radius: 50%;
   }
 }
 
