--- a/views/termsandconditions.ejs
+++ b/views/termsandconditions.ejs
@@ -9,14 +9,15 @@
 		<div class="background-overlay"></div>
 		<div class="container">
 			<header class="small-header text-left">
-				<h1 class="headline text-small hairline">Your Life Is About To Get Easier</h1>
+				<h1 class="headline text-small hairline underline underline-left">See Roadmunk In Action</h1>
 			</header>
 			<div class="row">
 				<span class="col-md-5 text-left subheader">
-					<p>Want to try Roadmunk? Get started with a 14-day trial.</p>
+					<p>Start a free 14-day trial and build your roadmap in a matter of minutes.</p>
 				</span>
-				<span class="col-md-5 right subheader">
-					<a href="#" class="cta right"></a>
+				<!-- attach subheader if want on same level as other text -->
+				<span class="col-md-5 right move-up">
+					<a href="https://app.roadmunk.com/login/#/signup" class="cta right"></a>
 				</span>
 			</div>
 		</div>
