Added 404 page and new button

--- a/public/stylesheets/home.less
+++ b/public/stylesheets/home.less
@@ -41,6 +41,11 @@
         bottom : -35px;
       }
     }
+    &.underline-404 {
+      &:before {
+        bottom: -20px;
+      }
+    }
   }
 
   &.black-white {
