--- a/public/stylesheets/global.less
+++ b/public/stylesheets/global.less
@@ -48,6 +48,10 @@ body {
     line-height: 0.5;
 }
 
+.thin {
+    font-weight: 300 !important;
+}
+
 .med-margin-bottom {
     margin-bottom: 60px !important;
 }
@@ -117,6 +121,98 @@ a:link {
     }
 }
 
+.after-before() {
+    content: " ";
+    width: 0;
+    height: 0;
+    top: 0;
+    position: absolute;
+}
+
+//Other button
+.btn, button {
+    outline: 0;
+    border: 0;
+    box-shadow: none;
+    text-shadow: none !important;
+    font-weight: normal;
+    .border-radius(0);
+    .transition(background-color 0.1s linear);
+    &:focus {
+        outline: none;
+    }
+    &:after {
+        .transition(all 0.1s linear);
+    }
+    span {
+        font-size: 14px;
+    }
+}
+
+.btn-primary {
+    background-color: @roadmunk-orange;
+    border-color: @light-orange;
+    &:hover {
+        .transition(all 0.1s linear);
+        background-color: darken(@roadmunk-orange, 10%);
+    }
+    &:hover > .hex-alt-big {
+        .transition(all 0.1s linear);
+        background: darken(@light-orange, 10%);
+    }
+    &:hover > .hex-alt-big:before {
+        .transition(all 0.1s linear);
+        border-right-color: darken(@light-orange, 10%);
+    }
+    &:hover > .hex-alt-big:after {
+        .transition(all 0.1s linear);
+        border-left-color: darken(@light-orange, 10%);
+    }
+}
+
+.btn-lg {
+    padding-top: 12px;
+    padding-bottom: 13px;
+    span {
+        font-size: 16px;
+    }
+}
+
+[class*="btn-icon"] {
+    position: relative;
+    &:after {
+        .after-before();
+    }
+    .hex-alt {
+        display: block;
+        position: absolute;
+        top: 0;
+        z-index: 1;
+        [class^="icon-"],
+        [class*=" icon-"] {
+            display: inline-block;
+        }
+    }
+}
+
+.btn-icon-right {
+    margin-right: 10px;
+    padding-right: 42px;
+    .hex-alt {
+        right: -10px;
+    }
+    &.btn-lg {
+        margin-right: 15px;
+        padding-right: 55px;
+        .hex-alt {
+            right: -13px;
+        }
+    }
+}
+/* End of other button */
+
+
+//The button to go to the top of the page
 .go-top {
     position: fixed !important;
     display: block;
@@ -136,34 +232,45 @@ a:link {
     color: @white;
 }
 
-.hex-alt {
-    display: block;
-    margin-left: 10px;
-    margin-right: 10px;
-    width: 21px;
-    height: 36px;
+
+.hex(@margin, @hex-size, @width, @height, @color) {
+    display: inline-block;
+    margin-left: @margin;
+    margin-right: @margin;
+    width: @width;
+    height: @height;
     position: relative;
     text-align: center;
-    line-height: 36px;
+    line-height: @height;
+    background: @color;
+    .transition(all 0.1s linear);
+
+    &:before, &:after {
+        .after-before();
+        .transition(all 0.1s linear);
+    }
+    &:before {
+        border-right: @margin solid @color;
+        border-top: @hex-size solid transparent;
+        border-bottom: @hex-size solid transparent;
+        left: -@margin;
+    }
+    &:after {
+        border-left: @margin solid @color;
+        border-top: @hex-size solid transparent;
+        border-bottom: @hex-size solid transparent;
+        right: -@margin;
+    }
 }
-.hex-alt:before, .hex-alt:after {
-    content: " ";
-    width: 0;
-    height: 0;
-    top: 0;
-    position: absolute;
+
+//Small Hex
+.hex-alt {
+    .hex(10px, 18px, 21px, 36px, @roadmunk-orange);
 }
-.hex-alt:before {
-    border-right: 10px solid @roadmunk-orange;
-    border-top: 18px solid transparent;
-    border-bottom: 18px solid transparent;
-    left: -10px;
-}
-.hex-alt:after {
-    border-left: 10px solid @roadmunk-orange;
-    border-top: 18px solid transparent;
-    border-bottom: 18px solid transparent;
-    right: -10px;
+
+//Large Hex
+.hex-alt-big {
+    .hex(14px, 24px, 28px, 48px, @light-orange);
 }
 
 .hidden {
