Partial Blog Setup

--- a/public/stylesheets/global.less
+++ b/public/stylesheets/global.less
@@ -64,6 +64,10 @@ body {
     margin-bottom: 15px !important;
 }
 
+.lg-margin-top {
+    margin-top: 90px !important;
+}
+
 .med-margin-top {
     margin-top: 60px !important;
 }
@@ -271,6 +275,11 @@ a:link {
 //Large Hex
 .hex-alt-big {
     .hex(14px, 24px, 28px, 48px, @light-orange);
+}
+
+//Large White Hex 
+.hex-alt-big-white {
+    .hex(14px, 24px, 28px, 48px, #fff);
 }
 
 .hidden {
