--- a/public/stylesheets/home.less
+++ b/public/stylesheets/home.less
@@ -60,6 +60,9 @@
     &.top-header {
       padding-top: 90px;
     }
+    &.extra-top-header {
+      padding-top: 150px;
+    }
     &.landing-page {
       padding-top: 160px;
     }
@@ -69,6 +72,9 @@
     padding: 90px 0;
     &.top-header {
       padding-top: 120px;
+    }
+    &.extra-top-header {
+      padding-top: 150px;
     }
     &.landing-page {
       padding-top: 1600px;
