--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -4,7 +4,7 @@
 			<h4>About Roadmunk</h4>
 			<ol>
 				<li class="nav-item">
-					<a href="#" title="Link">
+					<a href="/blog" title="Link">
 						Blog
 					</a>
 				</li>
