--- a/views/pricing.ejs
+++ b/views/pricing.ejs
@@ -23,9 +23,7 @@
 	</section>
 	<section class="section white-black section-normal has-top">
 		<div class="decor-top">
-			<svg class="decor" height="100%" preserveAspectRatio="none" version="1.1" viewBox="0 0 100 100" width="100%" xmlns="http://www.w3.org/2000/svg">
-				<path d="M0 100 L100 0 L100 100" stroke-width="0"></path>
-			</svg>
+			<% include topangle %>
 		</div>
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
