--- a/views/header.ejs
+++ b/views/header.ejs
@@ -17,7 +17,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/features">Features</a></li>
         <li><a href="/pricing">Pricing</a></li>
-        <li><a href="#">Blog</a></li>
+        <li><a href="/blog">Blog</a></li>
         <li><a href="https://app.roadmunk.com/login/#/">Sign In</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
