--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,9 +18,7 @@
 <article>
 	<section class="section black-white section-normal has-top">
 		<div class="decor-top">
-			<svg class="decor" height="100%" preserveAspectRatio="none" version="1.1" viewBox="0 0 100 100" width="100%" xmlns="http://www.w3.org/2000/svg">
-				<path d="M0 0 L100 100 L0 100" stroke-width="0"></path>
-			</svg>
+			<% include topangle %>
 		</div>
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
@@ -51,9 +49,7 @@
 	</section>
 	<section class="section white-black section-normal has-top">
 		<div class="decor-top">
-			<svg class="decor" height="100%" preserveAspectRatio="none" version="1.1" viewBox="0 0 100 100" width="100%" xmlns="http://www.w3.org/2000/svg">
-				<path d="M0 100 L100 0 L100 100" stroke-width="0"></path>
-			</svg>
+			<% include bottomangle %>
 		</div>
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
@@ -90,9 +86,7 @@
 	</section>
 	<section class="section black-white section-short has-top">
 		<div class="decor-top">
-			<svg class="decor" height="100%" preserveAspectRatio="none" version="1.1" viewBox="0 0 100 100" width="100%" xmlns="http://www.w3.org/2000/svg">
-				<path d="M0 0 L100 100 L0 100" stroke-width="0"></path>
-			</svg>
+			<% include topangle %>
 		</div>
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
@@ -122,9 +116,7 @@
 	</section>
 	<section class="section white-black section-normal has-top">
 		<div class="decor-top">
-			<svg class="decor" height="100%" preserveAspectRatio="none" version="1.1" viewBox="0 0 100 100" width="100%" xmlns="http://www.w3.org/2000/svg">
-				<path d="M0 100 L100 0 L100 100" stroke-width="0"></path>
-			</svg>
+			<% include bottomangle %>
 		</div>
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
@@ -184,9 +176,7 @@
 	</section>
 	<section class="section black-white section-normal has-top">
 		<div class="decor-top">
-			<svg class="decor" height="100%" preserveAspectRatio="none" version="1.1" viewBox="0 0 100 100" width="100%" xmlns="http://www.w3.org/2000/svg">
-				<path d="M0 0 L100 100 L0 100" stroke-width="0"></path>
-			</svg>
+			<% include topangle %>
 		</div>
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
