--- a/views/termsandconditions.ejs
+++ b/views/termsandconditions.ejs
@@ -1,10 +1,5 @@
 <article>
 	<section class="section black-white section-large top-header has-top">
-		<div class="decor-top">
-			<svg class="decor" height="100%" preserveAspectRatio="none" version="1.1" viewBox="0 0 100 100" width="100%" xmlns="http://www.w3.org/2000/svg">
-				<path d="M0 0 L100 100 L0 100" stroke-width="0"></path>
-			</svg>
-		</div>
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
 		<div class="container">
@@ -24,9 +19,7 @@
 	</section>
 	<section class="section white-black section-normal has-top">
 		<div class="decor-top">
-			<svg class="decor" height="100%" preserveAspectRatio="none" version="1.1" viewBox="0 0 100 100" width="100%" xmlns="http://www.w3.org/2000/svg">
-				<path d="M0 100 L100 0 L100 100" stroke-width="0"></path>
-			</svg>
+			<% include topangle %>
 		</div>
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
